# Cellphone_locator

./: README.md
src/: .clang-format  CMakeLists.txt  Locator.cpp  Locator.h  Logger.cpp  Logger.h  ProximityTrigger.cpp  ProximityTrigger.h  Subscriber.cpp  Subscriber.h  Zone.cpp  Zone.h  ZoneTrigger.cpp  ZoneTrigger.h  config.json  main.cpp  unitTests.cpp
src/client/: CMakeLists.txt
src/client/src/: main.cpp
src/proto/: CMakeLists.txt  location_data.proto  location_service.proto  location_subscription.proto
src/server/: CMakeLists.txt
src/server/src/: Locator_server.cpp  Locator_server.h  Logger.cpp  Logger.h  ProximityTrigger.cpp  ProximityTrigger.h  Subscriber.cpp  Subscriber.h  Zone.cpp  Zone.h  ZoneTrigger.cpp  ZoneTrigger.h  main.cpp
src/server/src/tests/: unitTests.cpp
